# secure-zeph

./: .env.example  .gitignore  .zipignore  Makefile  README.md  agent.py  eval_harness.go  main.go  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: ci.yml
apps/evalrunner/: comparative_reporter.py  judge.py  loader.py  multi_model_runner.py  reporter.py  runner.py  triage.py
apps/evalrunner/scorers/: __init__.py  asr_scorer.py  fpr_scorer.py  latency_scorer.py  utility_scorer.py
apps/evalrunner/tests/: test_evalrunner.py  test_multi_model.py
apps/gateway/app/: config.py  main.py
apps/gateway/app/api/: health.py  v1_enforce.py  v1_proxy.py  v1_scan.py
apps/gateway/app/middleware/: request_id.py
apps/gateway/app/providers/: __init__.py  anthropic_adapter.py  (+4 more)
apps/gateway/tests/: test_heuristics.py  test_integration.py  test_normalization.py  test_policy.py
data/: canary_tokens.yaml
data/experiments/: experiments.yaml  multi_model_experiments.yaml
data/scenarios/: agent_indirect_miniset.yaml  benign_miniset.yaml  diverse_attacks_v1.yaml  injecagent_dh_miniset.yaml
docs/: architecture.md  eval_methodology.md  threat_model.md
engine/: engine.go
policies/: approval_gates.yaml  default_tools.yaml  exfil_controls.yaml  trust_zones.yaml
policies/rego/: tool_policy.rego
research/: index.md  index.yaml
rules/: master_rules_v1.json
scripts/: analyze_missed.py  check_scenario.py  convert_injecagent.py  run_experiment.py  run_multi_model.py  run_single.py  run_triage.py  show_injecagent.py  show_our_missed.py  show_scenarios.py
(+4 files in other folders)
